--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,4 +1,4 @@
 //导航栏背景色
-$van_nav_bar_background:#0090FF;
+$van_nav_bar_background: #0090ff;
 // 导航栏文字颜色
-$van_nav_bar_text_color:#fff;
+$van_nav_bar_text_color: #fff;
